Walka ze zdjęciami

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "async": "^0.2.10",
     "aws-sdk": "^2.0.31",
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "fs": "0.0.1-security",
+    "jimp": "^0.2.28"
   }
 }
