--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
 config.json
-.idea
-.vs
-/aws-sdk.js
-/aws-sd.js
-/npm-debug.log.3577829748
+idea
+vs
+aws-sdk.js
+aws-sd.js
+npm-debug.log.3577829748
