--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~3.4.8",
     "formidable": "^1.1.1",
     "fs": "0.0.1-security",
+    "jimp": "^0.2.28",
     "path": "^0.12.7"
   }
 }
